--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="" />
 
     <!-- Title  -->
-    <title>MetaTools (ApeTools)
+    <title>MetaTools | Home
     </title>
 
     <!-- Favicon -->
@@ -144,7 +144,7 @@
                 <div class="row gx-0">
                     <div class="col-lg-6">
                         <div class="info">
-                            <h1 class="mb-30"> MetaTools (ApeTools)  <span>First live preview of our utility!</span> </h1>
+                            <h1 class="mb-30"> MetaTools  <span>First live preview of our utility!</span> </h1>
                             <p class="text"> </p>
                             <div class="d-flex align-items-center mt-50">
    <!--
