--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <nav class="navbar navbar-expand-lg navbar-light style-4" id="main-nav">
         <div class="container">
             <a class="navbar-brand" href="#" data-scroll-nav="0">
-                <img src="logo_header.png" alt="">
+                <img width="100%" height="100%" src="logo_header.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -183,7 +183,7 @@
             <div class="container">
                 <div class="section-head text-center style-4">
                     <small class="title_small bg-white"> Awesome </small>
-                    <h2 class="mb-70">Meta Tools <span> For You</span> </h2>
+                    <h2 class="mb-70"><span>Meta Tools  For You</span> </h2>
                 </div>
                 <div class="content">
                     <div class="features-card">
@@ -239,7 +239,7 @@
                         <div class="col-lg-5">
                             <div class="info">
                                 <div class="section-head style-4">
-                                    <h2 class="mb-30">About <span> MetaTools </span> </h2>
+                                    <h2 class="mb-30"><span> About MetaTools </span> </h2>
                                 </div>
                                 <p class="text mb-40">
                                     Market sentiment defines trends
@@ -276,9 +276,9 @@
                                     These Metrics will allow the User to make a decision on whether the Token being displayed is worthy of Capital 
                                     Allocation further allowing them to decipher which Keywords are Trending Upwards.
                                 </p>
-                                <a href="#"
+                                <a href="https://t.me/MetaToolsERC" target="_blank"
                                     class="btn rounded-pill bg-blue4 fw-bold text-white mt-50">
-                                    <small> Join Community </small>
+                                    <small> Join MetaTools Community </small>
                                 </a>
                             </div>
                         </div>
@@ -309,7 +309,7 @@
                     <div class="row">
                         <div class="col-lg-5">
                             <div class="section-head style-4">
-                                <h2 class="mb-30">Tokenomics <span> MetaTools </span> </h2>
+                                <h2 class="mb-30"><span> Tokenomics MetaTools </span> </h2>
                             </div>
                             <p class="text mb-40">
                                 The first MetaTools token integration and distributed public equity
@@ -334,9 +334,9 @@
                                 </div>
                             </div>
                             <div class="d-flex align-items-center mt-70">
-                                <a href="#"
+                                <a href="https://t.me/MetaToolsERC"
                                     class="btn rounded-pill bg-blue4 fw-bold text-white me-4" target="_blank">
-                                    <small> Join Community</small>
+                                    <small> Join MetaTools Community</small>
                                 </a>
                                 <a href="#" data-lity class="play-btn">
                                     <span class="icon me-2">
@@ -369,7 +369,7 @@
         <section class="community section-padding pt-0 style-4">
             <div class="container">
                 <div class="section-head text-center style-4">
-                    <h2 class="mb-30"> Join Into <span> Growing Community</span> </h2>
+                    <h2 class="mb-30"> <span> Join Into Growing Community</span> </h2>
                 </div>
                 <div class="content">
                     <a href="#" class="commun-card">
