--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         <section class="community section-padding pt-0 style-4">
             <div class="container">
                 <div class="section-head text-center style-4">
-                    <h2 class="mb-30"> <span> Join Into Growing Community</span> </h2>
+                    <h2 class="mb-30"> <span> Join our Growing Community</span> </h2>
                 </div>
                 <div class="content">
                     <a href="#" class="commun-card">
