--- a/index.html
+++ b/index.html
@@ -241,27 +241,27 @@
                                     <h2 class="mb-30"><span> About MetaTools </span> </h2>
                                 </div>
                                 <p class="text mb-40">
-                                    Market sentiment defines trends
-                                    Influential figures like Vitalik, Elon and CZ give birth to a lot of meme tokens
-                                    With the success of latest coins like $THE Protocol, $TYRANT, $DIE, and many others, 
-                                    there is a need of an efficient tool which gives us on time insights to be able to capture these moves on time.
+                                    Market sentiment defines trends with influential figures like Vitalik, Elon and CZ giving birth to a lot of meme tokens. 
+                                    With the success of the latest coins like $THE Protocol, $TYRANT, $DIE, and many others, 
+                                    there is need for an efficient tool which provides on time insights to be able to capture these moves.
                                 </p>
                                 <p class="text mb-40">
-                                    It doesn’t stop here, once a token is successful a lot of short term plays are born following up on these trends, 
-                                    for a degen investor these plays are opportunity to have the next 100x gains they are looking for.
+                                    It doesn’t stop there. Once a token is successful, a lot of short term plays are born following these trends. 
+                                    For degen investors like us, these plays are opportunities to have the next 100x gains they are looking for.
                                 </p>
                                 <p class="text mb-40">
-                                    Lets us offer you all a technology which will help you increase your chance of success. 
-                                    Meta tools is constantly scanning the Twitter activity of a carefully selected number of 'Influencer' 
-                                    Twitter feeds for Keywords or Keystrings/Phrases. It then cross-references these with the Live Pairs on ETH blockchain, 
-                                    finding any Keyword matches and delivering them to our users. 
+                                    Metatools is a technology that will help us all increase our chances of success. 
+                                    It will do this by constantly scanning the Twitter activity of a select number of Influencers for
+                                    keywords and phrases and cross-references them with live pairs on the Ethereum blockchain, 
+                                    finding any keyword matches and delivering them to users in real-time. 
+                                    This will allow them to invest in what could be the beginning of a highly profitable trend.
                                 </p>
                                 <p class="text mb-40">
                                     This means that if a Twitter Influencers Tweets a specific word that Chimp tools determines is being launched, 
                                     it will deliver this to our users in Live time, allowing them to Invest in what could be the beginning of a highly profitable trend.
                                 </p>
                                 <p class="text mb-40">
-                                    Alongside Delivering these prospective triggers, we will also offer further market data metrics such as; 
+                                    Alongside delivering these prospective triggers, we will also offer further market data metrics such as: 
                                 </p>
                                 <p class="text mb-40">
                                     ✔ MarketCap<br>
@@ -272,8 +272,8 @@
                                     ✔ Taxes 
                                 </p>
                                 <p class="text mb-40">
-                                    These Metrics will allow the User to make a decision on whether the Token being displayed is worthy of Capital 
-                                    Allocation further allowing them to decipher which Keywords are Trending Upwards.
+                                    These metrics will allow users to make a decision on whether the token being displayed is worthy of investing in, 
+                                    further allowing them to decipher which keywords are trending.
                                 </p>
                                 <a href="https://t.me/MetaToolsERC" target="_blank"
                                     class="btn rounded-pill bg-blue4 fw-bold text-white mt-50">
@@ -312,26 +312,30 @@
                             </div>
                             <p class="text mb-40">
                                 The first MetaTools token integration and distributed public equity
-                            </p>
+                            </p><center>
                             <div class="numbs">
                                 <div class="num-card">
                                     <div class="icon img-contain">
                                         <img src="assets/img/icons/testi_s4_ic1.png" alt="">
                                     </div>
-                                    <h2>10B</h2>
-                                    <p>Total supply and shares of MetaTools </p>
+                                    <h2 style="font-size: large;">BUY TAX - 5%</h2>
+                                    <p>TRUE OBLITERATION BURN</p>
+                                    <p>Burn | 1% </p>
+                                    <p>Lp | 1% </p>
+                                    <p>MW | 3% </p>
                                 </div>
                                 <div class="num-card">
                                     <div class="icon img-contain">
                                         <img src="tax.png" alt="">
                                     </div>
-                                    <h2>5% BUY</h2>
-                                    <h2>8% SELL</h2>
-
-                                    <p> Public Equity & shared lifetime dividend
-                                    </p>
+                                    <h2 style="font-size: large;">SELL TAX - 8%</h2>
+                                    <p>TRUE OBLITERATION BURN</p>
+                                    <p>Burn | 1% </p>
+                                    <p>Lp | 2% </p>
+                                    <p>MW | 5% </p>
                                 </div>
                             </div>
+                        </center>
                             <div class="d-flex align-items-center mt-70">
                                 <a href="https://t.me/MetaToolsERC"
                                     class="btn rounded-pill bg-blue4 fw-bold text-white me-4" target="_blank">
