--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                     <div class="icon img-contain">
                                         <img src="assets/img/icons/testi_s4_ic1.png" alt="">
                                     </div>
-                                    <h2 style="font-size: large;">BUY TAX - 5%</h2>
+                                    <h2 style="font-size: large; color: #313131;">BUY TAX - 5%</h2>
                                     <p>TRUE OBLITERATION BURN</p>
                                     <p>Burn | 1% </p>
                                     <p>Lp | 1% </p>
@@ -328,7 +328,7 @@
                                     <div class="icon img-contain">
                                         <img src="tax.png" alt="">
                                     </div>
-                                    <h2 style="font-size: large;">SELL TAX - 8%</h2>
+                                    <h2 style="font-size: large; color: #313131;">SELL TAX - 8%</h2>
                                     <p>TRUE OBLITERATION BURN</p>
                                     <p>Burn | 1% </p>
                                     <p>Lp | 2% </p>
