--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                     <div class="row">
                         <div class="col-lg-5">
                             <div class="section-head style-4">
-                                <h2 class="mb-30"><span> Tokenomics MetaTools </span> </h2>
+                                <h2 class="mb-30"><span> MetaTools Tokenomics  </span> </h2>
                             </div>
                             <p class="text mb-40">
                                 The first MetaTools token integration and distributed public equity
