--- a/index.html
+++ b/index.html
@@ -294,16 +294,15 @@
         <!-- ====== end about ====== -->
 
 
-
+<!--
         <div class="section-head style-4" >
             <h2 class="mb-30"><span><center> MetaTools Chart</center></span> </h2>
         </div>
 
         <div class="grid lg:grid-cols-1 gap-20">
             <div id="uni-frame" class="items-center d-flex justify-content-end" style="display: none;">
-		    <iframe style="height:550px !important;min-height:450px !important; width:100%;" id="geckoterminal-embed" title="GeckoTerminal Embed" src="https://www.geckoterminal.com/eth/pools/0x05ea6727c42429c2e50d957ccd06dbe75e9f1993?embed=1&info=1&swaps=1" frameborder="0" allow="clipboard-write" allowfullscreen></iframe>
-		<!-- <iframe src="https://www.geckoterminal.com/eth/pools/0xeb898b0e1fd56c97ac23d807acce26f02eeaa355
-                " class="rounded-3xl w-full h-full relative" style="height: 550px !important;min-height: 450px !important; width:100%;"></iframe> -->
+ <iframe src="https://www.geckoterminal.com/eth/pools/0xeb898b0e1fd56c97ac23d807acce26f02eeaa355
+                " style="height: 550px !important;min-height: 450px !important; width:100%;"></iframe> 
             </div>
 
 <br><br>
@@ -316,7 +315,7 @@
                     " style="height: 550px !important;min-height: 450px !important; width:100%;"></iframe>
                 </div>
             </div>
-
+-->
         <!-- ====== start testimonials ====== -->
         <section class="testimonials style-4 pt-70" data-scroll-index="5" id="tokenomics">
             <div class="container">
