--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@
                         </a>
                     </li>
 
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://link.medium.com/hmek6iXdCvb"
+                            target="_blank">
+                            Medium
+                        </a>
+                    </li>
+
 
                 </ul>
                 <div class="nav-side">
@@ -293,26 +300,26 @@
         </section>
         <!-- ====== end about ====== -->
 
-
 <!--
+
         <div class="section-head style-4" >
-            <h2 class="mb-30"><span><center> MetaTools Chart</center></span> </h2>
+            <h2 class="mb-30" style="display: flex; justify-content: center;"><span> MetaTools Chart</span> </h2>
         </div>
 
         <div class="grid lg:grid-cols-1 gap-20">
             <div id="uni-frame" class="items-center d-flex justify-content-end" style="display: none;">
- <iframe src="https://www.geckoterminal.com/eth/pools/0xeb898b0e1fd56c97ac23d807acce26f02eeaa355
-                " style="height: 550px !important;min-height: 450px !important; width:100%;"></iframe> 
+ <iframe src="https://www.geckoterminal.com/eth/pools/0x88e6a0c2ddd26feeb64f039a2c41296fcb3f5640
+                " style="height: 650px !important;min-height: 450px !important; width:100%; margin: 5% 5%; border-radius: 50px; padding: 20px; border: 5px solid;"></iframe> 
             </div>
 
-<br><br>
+
 <div class="section-head style-4" >
-    <h2 class="mb-30"><span><center> MetaTools Swap</center></span> </h2>
+    <h2 class="mb-30" style="display: flex; justify-content: center;"><span> MetaTools Swap</span> </h2>
 </div>
             <div class="grid lg:grid-cols-1 gap-20">
                 <div id="uni-frame" class="items-center d-flex justify-content-end" style="display: none;">
-                    <iframe src="https://app.uniswap.org/#/swap?inputCurrency=ETH&amp;outputCurrency=0x7aa42e5386191318830945E16a5a57590eb01d7F
-                    " style="height: 550px !important;min-height: 450px !important; width:100%;"></iframe>
+                    <iframe src="https://app.uniswap.org/#/swap?inputCurrency=ETH&amp;outputCurrency=0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2
+                    " style="height: 650px !important;min-height: 450px !important; width:100%; margin: 5% 5%; border-radius: 50px; padding: 20px; border: 5px solid;"></iframe>
                 </div>
             </div>
 -->
@@ -438,6 +445,9 @@
                         <ul class="links">
                             <li>
                                 <a href="#" target="_blank">WHITEPAPER</a>
+                            </li>
+                            <li>
+                                <a href="https://link.medium.com/hmek6iXdCvb" target="_blank">MEDIUM</a>
                             </li>
                             <li>
                                 <a href="#0" data-scroll-nav="4">BLOG</a>
