--- a/index.html
+++ b/index.html
@@ -384,9 +384,39 @@
         </section>
         <!-- ====== end testimonials ====== -->
 
+<style>
 
+    
+@media all and (max-width:480px) {
 
+    section .community .container .box img {display:block;margin:0 auto;}
+}
+</style>
 
+        <section class="community section-padding pt-0 style-4">
+            <div class="container">
+                <div class="section-head text-center style-4">
+                    <h2 class="mb-30"> <span> Proudly partnership with</span> </h2>
+                </div>
+                <div class="content box">
+                        <div class="icon">
+                            <img style="width: 350px; height: auto;" src="partnership/ds.png">
+                        </div>
+                        <div class="icon">
+                            <img style="width: 350px; height: auto;" src="partnership/DU.png">
+                        </div>
+                        <div class="icon">
+                            <img style="width: 350px; height: auto;" src="partnership/pom.png">
+                        </div>
+                        <div class="icon">
+                            <img style="width: 350px; height: auto;" src="partnership/CMC.png">
+                        </div>
+                        <div class="icon">
+                            <img style="width: 350px; height: auto;" src="partnership/CoinGecko.png">
+                        </div>              
+                </div>
+            </div>
+        </section>
 
 
         <!-- ====== start community ====== -->
@@ -459,8 +489,6 @@
                             <li>
                                 <a href="https://t.me/MetaToolsERC" target="_blank"> JOIN Telegram</a>
                             </li>
-
-
                         </ul>
                     </div>
                     <div class="col-lg-2">
