--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" target="_blank">
+                        <a class="nav-link" href="whitepaper.pdf" target="_blank">
                             Whitepaper
                         </a>
                     </li>
@@ -400,18 +400,22 @@
                 </div>
                 <div class="content box">
                         <div class="icon">
-                            <img style="width: 350px; height: auto;" src="partnership/ds.png">
+                            <img style="width: 350px; height: auto;" src="partnership/uniswap.png">
                         </div>
                         <div class="icon">
-                            <img style="width: 350px; height: auto;" src="partnership/DU.png">
+                            <img style="width: 350px; height: auto;" src="partnership/unicrypt.png">
                         </div>
-              
+                        <div class="icon">
+                            <img style="width: 350px; height: auto;" src="partnership/dextools.png">
+                        </div>
+                        <!--
                         <div class="icon">
                             <img style="width: 350px; height: auto;" src="partnership/CMC.png">
                         </div>
                         <div class="icon">
                             <img style="width: 350px; height: auto;" src="partnership/CoinGecko.png">
-                        </div>              
+                        </div>       
+                        -->       
                 </div>
             </div>
         </section>
@@ -472,7 +476,7 @@
                     <div class="col-lg-8">
                         <ul class="links">
                             <li>
-                                <a href="#" target="_blank">WHITEPAPER</a>
+                                <a href="whitepaper.pdf" target="_blank">WHITEPAPER</a>
                             </li>
                             <li>
                                 <a href="https://link.medium.com/hmek6iXdCvb" target="_blank">MEDIUM</a>
