--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                     This will allow them to invest in what could be the beginning of a highly profitable trend.
                                 </p>
                                 <p class="text mb-40">
-                                    This means that if a Twitter Influencers Tweets a specific word that Chimp tools determines is being launched, 
+                                    This means that if a Twitter Influencers Tweets a specific word that Meta tools determines is being launched, 
                                     it will deliver this to our users in Live time, allowing them to Invest in what could be the beginning of a highly profitable trend.
                                 </p>
                                 <p class="text mb-40">
@@ -299,6 +299,50 @@
 
         </section>
         <!-- ====== end about ====== -->
+        <style>
+        @media all and (max-width:480px) {
+
+            section .community .container .box img {display:block;margin:0 auto;}
+        }
+        </style>
+        
+                <section class="community section-padding pt-0 style-4">
+                    <div class="container">
+                        <div class="section-head text-center style-4">
+                            <h2 class="mb-30"> <span> META TOOLS DOCUMENTS</span> </h2>
+                        </div>
+                        <div class="content box" style="row-gap: 25%;">
+                            <div class="icon">
+                                <img style="width: 150px; height: auto;" src="">
+                            </div>
+                                <div class="icon">
+                                    <a href="https://github.com/SpyWolfNetwork/KYCs/blob/main/KYC_%20MetaTools_(No_contract).pdf" target="_blank"> <img style="width: 150px; height: auto;" src="KYC.png"></a>
+                                </div>
+                                <div class="icon">
+                                   <img style="width: 150px; height: auto;" src="">
+                                </div>
+                                <div class="icon">
+                                    <a href="whitepaper.pdf" target="_blank"> <img style="width: 150px; height: auto;" src="wp.png"> </a>
+                                </div>
+                                <div class="icon">
+                                   <img style="width: 150px; height: auto;" src="">
+                                </div>
+                                <div class="icon">
+                                    <a href="" target="_blank"> <img style="width: 150px; height: auto;" src="AUDIT.png"></a>
+                                </div>
+                                <!--
+                                <div class="icon">
+                                    <img style="width: 350px; height: auto;" src="partnership/CMC.png">
+                                </div>
+                                <div class="icon">
+                                    <img style="width: 350px; height: auto;" src="partnership/CoinGecko.png">
+                                </div>       
+                                -->       
+                        </div>
+                    </div>
+                </section>
+
+
 
 <!--
 
