--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <style>
         @media all and (max-width:480px) {
 
-            section .community .container .box img {display:block;margin:0 auto;}
+            section .community .container .box .icon img {display:block;margin:0 auto;}
         }
         </style>
         
@@ -316,19 +316,22 @@
                                 <img style="width: 150px; height: auto;" src="">
                             </div>
                                 <div class="icon">
-                                    <a href="https://github.com/SpyWolfNetwork/KYCs/blob/main/KYC_%20MetaTools_(No_contract).pdf" target="_blank"> <img style="width: 150px; height: auto;" src="KYC.png"></a>
+                                    <a href="https://github.com/SpyWolfNetwork/KYCs/blob/main/KYC_%20MetaTools_(No_contract).pdf" target="_blank"> 
+                                        <img style="width: 150px; height: auto;" src="KYC.png"></a>
                                 </div>
                                 <div class="icon">
                                    <img style="width: 150px; height: auto;" src="">
                                 </div>
                                 <div class="icon">
-                                    <a href="whitepaper.pdf" target="_blank"> <img style="width: 150px; height: auto;" src="wp.png"> </a>
+                                    <a href="whitepaper.pdf" target="_blank"> 
+                                        <img style="width: 150px; height: auto;" src="wp.png"> </a>
                                 </div>
                                 <div class="icon">
                                    <img style="width: 150px; height: auto;" src="">
                                 </div>
                                 <div class="icon">
-                                    <a href="" target="_blank"> <img style="width: 150px; height: auto;" src="AUDIT.png"></a>
+                                    <a href="" target="_blank"> 
+                                        <img style="width: 150px; height: auto;" src="AUDIT.png"></a>
                                 </div>
                                 <!--
                                 <div class="icon">
