--- a/index.html
+++ b/index.html
@@ -104,17 +104,31 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#tokenomics" >
+                            Tokenomics
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" >
+                            NFTs
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" >
+                            BotRoom
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="whitepaper.pdf" target="_blank">
                             Whitepaper
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#tokenomics" >
-                            Tokenomics
+                        <a class="nav-link" href="https://github.com/SpyWolfNetwork/KYCs/blob/main/KYC_%20MetaTools_(No_contract).pdf"
+                            target="_blank">
+                            KYC
                         </a>
                     </li>
-
-
                     <li class="nav-item">
                         <a class="nav-link" href="#"
                             target="_blank">
@@ -299,53 +313,6 @@
 
         </section>
         <!-- ====== end about ====== -->
-        <style>
-        @media all and (max-width:480px) {
-
-            section .community .container .box .icon img {display:block;margin:0 auto;}
-        }
-        </style>
-        
-                <section class="community section-padding pt-0 style-4">
-                    <div class="container">
-                        <div class="section-head text-center style-4">
-                            <h2 class="mb-30"> <span> META TOOLS DOCUMENTS</span> </h2>
-                        </div>
-                        <div class="content box" style="row-gap: 25%;">
-                            <div class="icon">
-                                <img style="width: 150px; height: auto;" src="">
-                            </div>
-                                <div class="icon">
-                                    <a href="https://github.com/SpyWolfNetwork/KYCs/blob/main/KYC_%20MetaTools_(No_contract).pdf" target="_blank"> 
-                                        <img style="width: 150px; height: auto;" src="KYC.png"></a>
-                                </div>
-                                <div class="icon">
-                                   <img style="width: 150px; height: auto;" src="">
-                                </div>
-                                <div class="icon">
-                                    <a href="whitepaper.pdf" target="_blank"> 
-                                        <img style="width: 150px; height: auto;" src="wp.png"> </a>
-                                </div>
-                                <div class="icon">
-                                   <img style="width: 150px; height: auto;" src="">
-                                </div>
-                                <div class="icon">
-                                    <a href="" target="_blank"> 
-                                        <img style="width: 150px; height: auto;" src="AUDIT.png"></a>
-                                </div>
-                                <!--
-                                <div class="icon">
-                                    <img style="width: 350px; height: auto;" src="partnership/CMC.png">
-                                </div>
-                                <div class="icon">
-                                    <img style="width: 350px; height: auto;" src="partnership/CoinGecko.png">
-                                </div>       
-                                -->       
-                        </div>
-                    </div>
-                </section>
-
-
 
 <!--
 
@@ -370,6 +337,11 @@
                 </div>
             </div>
 -->
+
+
+
+
+
         <!-- ====== start testimonials ====== -->
         <section class="testimonials style-4 pt-70" data-scroll-index="5" id="tokenomics">
             <div class="container">
