--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
         <section class="community section-padding pt-0 style-4">
             <div class="container">
                 <div class="section-head text-center style-4">
-                    <h2 class="mb-30"> <span> Proudly partnership with</span> </h2>
+                    <h2 class="mb-30"> <span> Proudly partnered with</span> </h2>
                 </div>
                 <div class="content box">
                         <div class="icon">
