--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="assets/css/lib/swiper.min.css" />
     <!-- ====== global style ====== -->
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="roadmap.css" />
 
 
     <!-- ====== global style ====== -->
@@ -99,13 +100,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">
-                            About
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#tokenomics" >
-                            Tokenomics
+                        <a class="nav-link" href="ROADMAP.pdf" target="_blank">
+                            Roadmap
                         </a>
                     </li>
                     <li class="nav-item">
@@ -332,12 +328,12 @@
 </div>
             <div class="grid lg:grid-cols-1 gap-20">
                 <div id="uni-frame" class="items-center d-flex justify-content-end" style="display: none;">
-                    <iframe src="https://app.uniswap.org/#/swap?inputCurrency=ETH&amp;outputCurrency=0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2
+                    <iframe src="https://app.uniswap.org/#/swap?inputCurrency=ETH&amp;outputCurrency=0xDA218fD737F6BBdC299c27c13418D55Da580c4a2
                     " style="height: 650px !important;min-height: 450px !important; width:100%; margin: 5% 5%; border-radius: 50px; padding: 20px; border: 5px solid;"></iframe>
                 </div>
             </div>
--->
 
+-->
 
 
 
@@ -402,6 +398,11 @@
             </div>
         </section>
         <!-- ====== end testimonials ====== -->
+
+
+
+
+
 
 <style>
 
@@ -495,21 +496,50 @@
                     <div class="col-lg-8">
                         <ul class="links">
                             <li>
-                                <a href="whitepaper.pdf" target="_blank">WHITEPAPER</a>
+                                <a href="#">
+                                   HOME
+                                </a>
                             </li>
                             <li>
-                                <a href="https://link.medium.com/hmek6iXdCvb" target="_blank">MEDIUM</a>
+                                <a href="ROADMAP.pdf" target="_blank">
+                                    Roadmap
+                                </a>
                             </li>
                             <li>
-                                <a href="#0" data-scroll-nav="4">BLOG</a>
+                                <a href="#" >
+                                    NFTs
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" >
+                                    BotRoom
+                                </a>
+                            </li>
+                            <li>
+                                <a href="whitepaper.pdf" target="_blank">
+                                    Whitepaper
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/SpyWolfNetwork/KYCs/blob/main/KYC_%20MetaTools_(No_contract).pdf"
+                                    target="_blank">
+                                    KYC
+                                </a>
                             </li>
                             <li>
                                 <a href="#"
-                                    target="_blank"> AUDIT </a>
+                                    target="_blank">
+                                    Audit
+                                </a>
                             </li>
+        
                             <li>
-                                <a href="https://t.me/MetaToolsERC" target="_blank"> JOIN Telegram</a>
+                                <a href="https://link.medium.com/hmek6iXdCvb"
+                                    target="_blank">
+                                    Medium
+                                </a>
                             </li>
+                            
                         </ul>
                     </div>
                     <div class="col-lg-2">
