--- a/index.html
+++ b/index.html
@@ -357,9 +357,9 @@
                                     </div>
                                     <h2 style="font-size: large; color: #313131;">BUY TAX - 5%</h2>
                                     <p>TRUE OBLITERATION BURN</p>
-                                    <p>Burn | 1% </p>
-                                    <p>Lp | 1% </p>
-                                    <p>MW | 3% </p>
+                                    <p>Auto LP 2% </p>
+                                    <p>Development 1% </p>
+                                    <p>Marketing 2% </p>
                                 </div>
                                 <div class="num-card">
                                     <div class="icon img-contain">
@@ -367,9 +367,9 @@
                                     </div>
                                     <h2 style="font-size: large; color: #313131;">SELL TAX - 8%</h2>
                                     <p>TRUE OBLITERATION BURN</p>
-                                    <p>Burn | 1% </p>
-                                    <p>Lp | 2% </p>
-                                    <p>MW | 5% </p>
+                                    <p>Auto LP 2% </p>
+                                    <p>Development 2% </p>
+                                    <p>Marketing 4% </p>
                                 </div>
                             </div>
                             <div class="d-flex align-items-center mt-70">
